# messenger-bot

./: Makefile  pyproject.toml  requirements-all.txt  requirements.txt
msg_bot/: config.py  events.py  main.py  publish.py  subscribe.py
msg_bot/schemas/: messages.py
msg_bot/utils/: common.py  pubsub.py
